# console_code_editor

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  DAO.c  DAO.h  LICENSE  Makefile  README.md  bins.c  bins.h  colors.c  colors.h  main.c  prj_error.c  signals_redefinition.c  signals_redefinition.h
IO/: DAO.c  segments.c  segments.h  terminal_io.c  terminal_io.h
UI/: user_interface.c  user_interface.h
file_system/: file_system_work.c  file_system_work.h
loging/: log.c  log.h
prj_types/: Array_type.c  Array_type.h  String_array_struct.c  String_struct.c  String_struct.h  String_struct_formatting.c
src/: colors.c  colors.h  get_git_name.sh  main.c  prj_error.h
src/IO/: DAO.c  DAO.h  segments.c  segments.h  terminal_io.c
src/UI/: user_interface.c  user_interface.h
src/file_system/: file_system_work.c  file_system_work.h
src/loging/: log.c
src/prj_types/: Array_type.c  Array_type.h  String_array_struct.c  String_struct.c  String_struct.h
src/test/: speed_tests.c  string_tests.h  test_funcs.c  test_funcs.h  test_functionality_of_new_functions.c
test/: speed_tests.h  string_tests.c  test_funcs.c  test_funcs.h  test_functionality_of_new_functions.c  test_functionality_of_new_functions.h
